static/css/iphone.css
body {
  font-size: 1.2em;
}

li.gravatar img.gravatar { 
  width: 1.2em;
  height: 1.2em;
  top: .3em;
  left: -1.65em;
}

.no-iphone {
  display: none;
}

.cols-2-1 .alpha,
.cols-2-1 .beta {
  float: none;
  width: auto;
  margin: 0;
  border: 0;
  padding: 0;
}

form {
  margin-left: 0; 
}

label.field input.text,
label.field textarea {
  width: 600px;
  font-size: 2em;
}

label.buttons input {
  font-size: 1.5em;
}

